# build-your-own-simple-static-code-analyzer-talk

./: .gitignore  .pre-commit-config.yaml  README.md  keynote.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: static.yml
snippets/: docstring_transformer.py  docstring_visitor_1.py  docstring_visitor_2.py  docstring_visitor_3.py  greet.py
