[project]
name = "build-your-own-simple-static-code-analyzer"
version = "1.0.0"
requires-python = ">=3.10"
dependencies = []

[tool.ruff]
line-length = 64

format.indent-style = "space"
format.quote-style = "single"
format.docstring-code-format = true

lint.isort.split-on-trailing-comma = false
lint.select = [
  "ANN",  # flake8-annotations
  "B",    # flake8-bugbear
  "C4",   # flake8-comprehensions
  "E",    # pycodestyle error
  "ERA",  # eradicate (commented out code)
  "F",    # pyflakes
  "FA",   # flake8-future-annotations
  "I",    # isort
  "ICN",  # flake8-import-conventions
  "N",    # pep8-naming
  "PERF", # perflint
  "PT",   # flake8-pytest-style
  "PTH",  # flake8-use-pathlib
  "RET",  # flake8-return
  "RSE",  # flake8-raise
  "RUF",  # ruff-specific rules
  "SIM",  # flake8-simplify
  "TC",   # flake8-type-checking (performance improvements)
  "TD",   # flake8-todos
  "TRY",  # tryceratops
  "UP",   # pyupgrade
  "W",    # pycodestyle warning
]
lint.ignore = [
  "B905", # `zip()` without an explicit `strict=` parameter
]
